--- a/css/style.css
+++ b/css/style.css
@@ -5,118 +5,490 @@
     src: url(../fonts/Calibri.ttf);
 }
 
-@font-face
-{
-    font-family: Abyssopelagic;
-    src: url(../fonts/abyssopelagic.otf);
-}
-
 /* body */
 body
 {
-    font-family: Calibri;
+    font-family: Calibri, sans-serif;
+    color: #202020;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 26px;
+    word-spacing: 2px;
+    -webkit-font-smoothing: antialiased;
+    padding-right: 0px !important;
+}
+
+h1, h2, h3, h4, h5, h6
+{
+    color: #2c2c2c;
+    letter-spacing: 1px;
+    font-weight: 400;
+}
+
+p
+{
+    margin-bottom: 26px;
+}
+
+a
+{
+    color: #4ecdc4;
+    text-decoration: none !important;
+    -webkit-transition: color 0.3s;
+            transition: color 0.3s;
+}
+
+a:hover
+{
+    color: #4c4c4c;
+}
+
+.btn 
+{
+    font-size:16px;
+    letter-spacing: 1px;
+    border-radius: 40px;
+    padding: 8px 30px;
+    margin-bottom: 5px;
+    -webkit-transition: color 0.3s, background-color 0.3s, border-color 0.3s;
+            transition: color 0.3s, background-color 0.3s, border-color 0.3s;
+}
+
+.btn.btn-lg
+{
+    padding: 10px 35px;
+    letter-spacing: 2px;
+    font-size: 21px;
+}
+
+.btn-main
+{
+    color: #fff;
+    background-color: rgba(93,197,188,1);
+    border-color: rgba(93,197,188,1);
+}
+
+.btn-main:hover,
+.btn-main:focus,
+.btn-main:active
+{
+    background-color: #33b5ac;
+    border-color: #33b5ac;
+    color: #fff;
 }
 
 /* header */
 
-header
-{
-    background-color: #ea5827;
-    height: 100px;
-    color: #fff;
-}
-
 .navbar-default
 {
-    border: none;
     background-color: transparent;
+    border-width: 0;
+    margin-bottom: 0 !important;
+    height: 102px;
+    -webkit-transition: background-color 0.3s, height 0.3s;
+            transition: background-color 0.3s, height 0.3s;
 }
 
-.navbar-default .navbar-brand,
-.navbar-default .navbar-brand:hover 
+/* хэдер после прокрутки  */
+.st-navbar-mini .navbar-default
+{
+/*    background-color: rgba(40, 40, 40, 0.95); */
+    background-color: rgba(60,60,60,0.95); 
+    height: 60px;
+}
+
+.st-navbar-mini .navbar-default .navbar-brand
+{
+    padding: 20px 15px;
+    font-size: 32px;
+    color: #fff;
+}
+
+.st-navbar-mini .navbar-default .navbar-nav>li>a
 {
     color: #fff;
 }
-.navbar-header .navbar-brand
+
+.st-navbar-mini .navbar-default .navbar-nav>li.active>a,
+.st-navbar-mini .navbar-default .navbar-nav>li.active a:hover,
+.st-navbar-mini .navbar-default .navbar-nav>li.active a:focus,
+.st-navbar-mini .navbar-default .navbar-nav>li.active a:active
 {
-    font-size: 36px;
-    line-height: 1.333;
-    text-align: left;
-    font-weight: bold;
-    padding-top: 30px;
-     
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
 }
-.navbar-brand, 
+
+.st-navbar-mini .navbar-default .navbar-nav>li>a:hover,
+.st-navbar-mini .navbar-default .navbar-nav>li>a:focus
+{
+    color: #fff;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.st-navbar-mini .navbar-default .navbar-brand:focus,
+.st-navbar-mini .navbar-default .navbar-brand:hover
+{
+    color: #fff;
+}
+
+/* logo */
+.navbar-brand
+{
+    font-size: 48px;
+    font-weight: 800;
+    height: auto;
+    padding: 27px 15px;
+    -webkit-transition: padding 0.3s;
+            transition: padding 0.3s;
+}
+
+.navbar-brand img
+{
+    height: 48px;
+    -webkit-transition: height 0.3s;
+            transition: height 0.3s;
+}
+
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:hover
+{
+    color: #777;
+}
+/* navigation */
 .navbar-nav>li>a
 {
-    padding: 45px 0 0 0;
-    margin-left: 30px;
-}
-
-.navbar-nav
-{
-    margin-left: 100px;
-    text-transform: lowercase;
-}
-
-.nav
-{
-    font-size: 20px;
-    line-height: 1.2;
-}
-
-.connect, .phones
-{
     font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding: 20px 20px 20px 20px;
+    -webkit-transition: color 0.3s, background-color 0.3s, padding 0.3s;
+            transition: color 0.3s, background-color 0.3s, padding 0.3s;
 }
 
-.nav>li>a:focus, .nav>li>a:hover, .navbar-default .navbar-nav>li>a, .navbar-default .navbar-nav>li>a:focus, .navbar-default .navbar-nav>li>a:hover
+.navbar-default .navbar-nav>li>a
 {
-    color: #fff;
-    background-color: transparent;
+    color: #777;
 }
 
-.navbar-default .connect>li>a
+.navbar-default .navbar-nav>li.active>a,
+.navbar-default .navbar-nav>li.active a:hover,
+.navbar-default .navbar-nav>li.active a:focus,
+.navbar-default .navbar-nav>li.active a:active
 {
-    color: #fff;
-    padding: 10px 0 0;
-    margin: 0px 15px 0 0; 
-    border-bottom: 1px dashed rgba(255,255,255,.7);
+    color: #000;
+    background-color: rgba(0,0,0,0);
 }
 
-.navbar-default .connect>li>a:hover,
-.navbar-default .connect>li>a:focus
+.navbar-default .navbar-nav>li>a:hover,
+.navbar-default .navbar-nav>li>a:focus
 {
-    border-bottom: 1px solid rgba(255,255,255,.7);
+    color: #000;
 }
-
-.navbar-default .connect>li:nth-child(2n)
-{
-    margin-top: 10px;
-}
-
-.navbar-default .navbar-nav>li>a:hover
-{
-    border-bottom: 1px solid rgba(255,255,255,.7);
-}
-
-.navbar-right
-{
-    margin-top: 5px;
-}
-.navbar-text
-{
-    float: none;
-    margin: 0 25px 0 0;
-    padding: 10px 15px;
-    color: #fff !important;
-}
-
-/* jumbotron */
-.jumbotron
+/* home  */
+.home
 {
     background-image: url(../img/jumbotron-bg.jpg);
     background-size: cover;
     background-position: center ;
-    background-repeat: none;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-color: #fff;
+    margin: 0;
+    padding: 100px 0 60px 0;
+    position: relative;
+}
+
+.home .st-home-unit
+{
+    position: relative;
+}
+
+.home .hero-txt
+{
+    color: #151515;
+    text-align: center;
+}
+
+.home .hero-txt .hero-title
+{
+    color: #4c4c4c;
+    color: #000;
+    text-transform: uppercase;
+    font-size: 4em;
+    line-height: 75px;
+    font-weight: 400;
+    letter-spacing: 2px;
+/*    word-spacing: 4px; */
+    margin-bottom: 15px; 
+    margin-top: 55px; 
+    padding-top: 20px;
+    padding-bottom: 10px; 
+/*    text-shadow: 1px 2px #999;   */
+
+}
+
+.home .hero-txt .hero-work
+{
+    color: #4c4c4c;
+    font-size: 1.7em;
+    font-weight: 300;
+    letter-spacing: 2px;
+    padding-top: 20px; 
+    margin-bottom: 0;
+/*    text-shadow: 1px 1px #333; */
+}
+
+.home .hero-txt .hero-work:after
+{
+    content: "";
+    display: block;
+    width: 200px;
+    height: 4px;
+    margin: 40px auto; 
+    background-color: transparent;
+    border-width: 1px 0;
+    border-style: solid;
+    border-color: rgba(0,0,0,.3);
+}
+
+.home .hero-txt .hero-item
+{
+    max-width: 900px;
+    margin: 0 auto; 
+    color: #4c4c4c;
+    padding: 20px; 
+    font-size: 1.5em;
+    font-weight: 200;
+    letter-spacing: 0px;
+}
+
+.st-home-unit
+{
+    background-color: rgba(245,245,245,.875);
+/*    background-color: rgba(255,213,70,0.85); */
+    border-radius: 5px;
+ /*   border: 3px solid #4c4c4c; */
+ }
+
+.home .hero-title 
+{
+    text-align: center;
+}
+
+/* Mouse animate icon */
+.mouse-icon
+{
+    position: absolute;
+    left: 50%;
+    bottom: 10px;
+    border: 2px solid #fff;
+    border-radius: 16px;
+    height: 40px;
+    width: 24px;
+    margin-left: - 15px;
+    display: block;
+    z-index: 10;
+    opacity: 0.8;
+}
+
+.mouse-icon .wheel
+{
+    -webkit-animation-name: drop;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+    -webkit-animation-delay: 0s;
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-play-state: running;
+    -webkit-animation-name: drop;
+            animation-name: drop;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-timing-function: linear;
+            animation-timing-function: linear;
+    -webkit-animation-delay: 0s;
+            animation-delay: 0s;
+    -webkit-animation-iteration-count: infinite;
+            animation-iteration-count: infinite;
+    -webkit-animation-play-state: running;
+            animation-play-state: running;
+}
+
+.mouse-icon .wheel 
+{
+    position: relative;
+    border-radius: 10px;
+    background: #fff;
+    width: 2px;
+    height: 6px;
+    top: 4px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@-webkit-keyframes drop
+{
+    0% {
+        top: 5px;
+        opacity: 0;
+    }
+
+    30% {
+        top: 10px;
+        opacity: 1;
+    }
+
+    100% {
+        top: 25px;
+        opacity: 0;
+    }
+    
+}
+
+@keyframes drop
+{
+    0% {
+        top: 5px;
+        opacity: 0;
+    }
+
+    30% {
+        top: 10px;
+        opacity: 1;
+    }
+
+    100% {
+        top: 25px;
+        opacity: 0;
+    }
+}
+/* testimonials */
+.testimonials
+{
+    padding: 60px 0;
+    background-color: #ddd;
+    color: #fff;
+}
+
+.testimonial
+{
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.testimonial .testimonial-img
+{
+    float: left;
+    margin-right: 30px;
+    position: relative;
+}
+
+.testimonial .testimonial-img:after
+{
+    content: '';
+    display: block;
+    width: 40px;
+    height: 40px;
+    border-radius: 40px;
+    background-color: #4ecdc4;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+}
+
+.testimonial .testimonial-img:before
+{
+    font-family: 'Tenor Sans', sans-serif;
+    content: '\201C';
+    font-size: 40px;
+    position: absolute;
+    bottom: 1%;
+    left: 12%;
+    z-index: 99;
+}
+
+.testimonial .testimonial-img img
+{
+    border-radius: 50%;
+    width: 150px;
+}
+
+.testimonial blockquote
+{
+    border-width: 0;
+}
+
+.testimonial blockquote p
+{
+    font-style: italic;
+    font-weight: 300;
+}
+
+.testimonial blockquote footer,
+.testimonial blockquote small,
+.testimonial blockquote .small
+{
+    color: #fff;
+}
+/* colors */
+.orange
+{
+    background-color: rgba(212,90,46,1);
+}
+
+/* pricing */
+.pricing
+{
+    padding: 100px 0;
+}
+
+.pricing-table
+{
+    border: 1px solid #f2f2f2;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+.pricing-table .pricing-header .pt-price
+{
+    color: #4c4c4c;
+    font-size: 40px;
+    line-height: 70px;
+    font-weight: 400;
+    text-align: center;
+    padding: 10px 40px;
+}
+
+.pricing-table .pricing-header .pt-name
+{
+    padding: 10px 40px;
+    text-align: center;
+    font-weight: 300;
+    font-size: 24px;
+    line-height: 40px;
+    color: #4c4c4c;
+    border-top: 1px solid #f2f2f2;
+    border-bottom: 1px solid #f2f2f2;
+}
+
+.pricing-table .pricing-body ul
+{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.pricing-table .pricing-body ul li
+{
+    padding: 8px 25px;
+    margin: 0;
+}
+
+.pricin-table .pricing-body ul li .fa
+{
+    font-size: inherit;
+}
+
+.pricing-table .pricing-body ul li .fa-plane
+{
+/*    color: yellow; */
 }
