--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 /* body */
 body
 {
-    font-family: Calibri, sans-serif;
+    font-family: 'PT Sans', sans-serif;
     color: #4c4c4c;
     font-weight: 400;
     font-size: 14px;
@@ -47,7 +47,7 @@ a:hover
 {
     font-size:16px;
     letter-spacing: 1px;
-    border-radius: 40px;
+    border-radius: 5px;
     padding: 8px 30px;
     margin-bottom: 5px;
     -webkit-transition: color 0.3s, background-color 0.3s, border-color 0.3s;
@@ -64,27 +64,34 @@ a:hover
 .btn-main
 {
     color: #fff;
-    background-color: rgba(93,197,188,1);
-    border-color: rgba(93,197,188,1);
+/*    background-color: rgba(93,197,188,1);
+    border-color: rgba(93,197,188,1); */
+    background-color: rgba(40,182,246,1);
+    border-color: rgba(40,182,246,1);
+    text-transform: uppercase;
 }
 
 .btn-main:hover,
 .btn-main:focus,
 .btn-main:active
 {
+/*    
     background-color: #33b5ac;
     border-color: #33b5ac;
+*/
+    background-color: rgba(34,147,200,1);
+    border-color: rgba(34,147,200,1);
     color: #fff;
 }
 input
 {
-    margin: 20px 0;
+    margin: 10px 0;
     font-weight: 400;
 }
 input.name,
 input.tel
 {
-    padding: 30px 40px 30px 50px;
+    padding: 25px 40px 25px 50px;
     color: #000;
     
 }
@@ -95,7 +102,7 @@ form .input
 }
 form .input input
 {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 form .input .fa-input
@@ -109,6 +116,12 @@ form .input .fa-input
 form button
 {
     width: 100%;
+}
+
+/* scroll-rail*/
+.nicescroll-rails
+{
+    background-color: rgba(0,0,0,.1);
 }
 
 .section-title
@@ -135,7 +148,14 @@ form button
 {
     text-align: center;
 }
-
+.section-title.st-left
+{
+    text-align: left;
+}
+.section-title.st-left h3
+{
+    padding-left: 0px;
+}
 /* header */
 
 .navbar-default
@@ -152,7 +172,8 @@ form button
 .st-navbar-mini .navbar-default
 {
 /*    background-color: rgba(40, 40, 40, 0.95); */
-    background-color: rgba(60,60,60,0.95); 
+/*    background-color: rgba(60,60,60,0.95); */
+    background-color: rgba(54,71,79,0.95);
     height: 60px;
 }
 
@@ -174,14 +195,16 @@ form button
 .st-navbar-mini .navbar-default .navbar-nav>li.active a:active
 {
     color: #fff;
-    background-color: rgba(0,0,0,0.5);
+/*    background-color: rgba(0,0,0,0.5); */
+    background-color: rgba(33,44,49,.95);
 }
 
 .st-navbar-mini .navbar-default .navbar-nav>li>a:hover,
 .st-navbar-mini .navbar-default .navbar-nav>li>a:focus
 {
     color: #fff;
-    background-color: rgba(0,0,0,0.5);
+/*    background-color: rgba(0,0,0,0.5); */
+    background-color: rgba(33,44,49,.95);
 }
 
 .st-navbar-mini .navbar-default .navbar-brand:focus,
@@ -246,12 +269,12 @@ form button
 /* home  */
 .home
 {
-    background-image: url(../img/jumbotron-bg.jpg);
+    background-image: url(../img/jumbotron-bg.jpg); 
     background-size: cover;
-    background-position: center ;
+    background-position: top center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-color: #fff;
+    background-color: rgba(214,222,225,1);
     margin: 0;
     padding: 100px 0 60px 0;
     position: relative;
@@ -270,24 +293,29 @@ form button
 
 .home .hero-txt .hero-title
 {
+    font-family: 'PT Sans Caption', sans-serif;
     color: #4c4c4c;
-    color: #000;
+    color: #fff;
+    font-size: 74px;
+    line-height: 1.2;
+    font-weight: 700;
     text-transform: uppercase;
-    font-size: 4em;
-    line-height: 75px;
-    font-weight: 400;
-    letter-spacing: 2px;
-/*    word-spacing: 4px; */
     margin-bottom: 15px; 
-    margin-top: 55px; 
+    margin-top: 50px; 
+    margin-bottom: 20px;
     padding-top: 20px;
     padding-bottom: 10px; 
-/*    text-shadow: 1px 2px #999;   */
-
+    text-shadow: 1px 2px #333;    
+    text-align: center;
+}
+.home .hero-txt .hero-title span
+{
+    text-transform: none;
 }
 
 .home .hero-txt .hero-work
 {
+    display: none;
     color: #4c4c4c;
     font-size: 1.7em;
     font-weight: 300;
@@ -296,7 +324,7 @@ form button
     margin-bottom: 0;
 /*    text-shadow: 1px 1px #333; */
 }
-
+/*
 .home .hero-txt .hero-work:after
 {
     content: "";
@@ -309,30 +337,27 @@ form button
     border-style: solid;
     border-color: rgba(0,0,0,.3);
 }
-
+*/
 .home .hero-txt .hero-item
 {
     max-width: 900px;
-    margin: 0 auto; 
-    color: #4c4c4c;
-    padding: 20px; 
-    font-size: 1.5em;
+    margin: 20px auto; 
+    color: #fff;
+    padding: 20px 0; 
+    font-size: 24px;
     font-weight: 200;
-    letter-spacing: 0px;
+    line-height: 0.75;
+    text-shadow: 1px 1px #333;   
+    text-align: center;
 }
 
 .st-home-unit
 {
-    background-color: rgba(245,245,245,.875);
+/*    background-color: rgba(245,245,245,.875); */
 /*    background-color: rgba(255,213,70,0.85); */
     border-radius: 5px;
  /*   border: 3px solid #4c4c4c; */
  }
-
-.home .hero-title 
-{
-    text-align: center;
-}
 
 /* Mouse animate icon */
 .mouse-icon
@@ -424,7 +449,7 @@ form button
 .testimonials
 {
     padding: 60px 0;
-    background-color: #ddd;
+    background-color: #889ca7;
     color: #fff;
 }
 
@@ -448,7 +473,7 @@ form button
     width: 40px;
     height: 40px;
     border-radius: 40px;
-    background-color: rgba(93,197,188,1);
+    background-color: rgba(40,182,246,1);
     position: absolute;
     bottom: 5%;
     left: 5%;
@@ -607,7 +632,6 @@ form button
     color: #000;
     font-size: 60px;
     font-weight: 900;
-    letter-spacing: 2px;
     line-height: 74px;
 }
 
@@ -631,6 +655,7 @@ form button
 {
     text-align: center;
     padding: 15px 40px;
+    margin-top: 20px;
 /*    border-top: 1px solid #e2e2e2; */
 }
 
@@ -664,7 +689,7 @@ form button
 .features-desc
 {
     padding: 100px 0;
-    background-color: rgba(221,240,236,1);
+/*    background-color: rgba(221,240,236,1); */
 }
 
 .features-desc .img-general
@@ -745,7 +770,8 @@ form button
 
 .adventages .adventage-num
 {
-    background-color: rgba(93,197,188,1);
+    background-color: rgba(40,182,246,1);
+    background-color: orange;
     border-radius: 50%;
     color: #fff;
     display: block;
@@ -827,6 +853,7 @@ form button
 .adventage-second blockquote:before
 {
     background-color: rgba(244,212,90,1);
+    background-color: orange;
     border-radius: 50%;
     content: '';
     display: block;
@@ -838,6 +865,19 @@ form button
     z-index: -1;
 }
 
+.adventage-second.small blockquote
+{
+    min-width: 60px;
+}
+
+.adventage-second.small blockquote:before
+{
+    height: 40px;
+    width: 40px;
+    left: 1px;
+    top: 12px;
+}
+
 .adventage-second blockquote p
 {
     font-size: 18px;
@@ -845,6 +885,7 @@ form button
     font-weight: 400;
     padding-left: 10px;
     position: relative;
+    padding-bottom: 0px;
 }
 
 .adventage-second blockquote p:before
@@ -857,10 +898,148 @@ form button
     font-size: 18px;
 }
 
-/* three-steps */
-.three-steps
+.adventage-second.small blockquote p
+{
+    line-height: 22px;
+}
+
+.adventage-second.small blockquote p:before
+{
+    left: -22px;
+    top: 11px;
+    font-size: 14px;
+}
+
+/* visa-today */
+.visa-today
 {
     background-color: rgba(233,233,233,1);
     padding: 100px 0;
+}
 
+/* refusal */
+.refusal
+{
+    padding: 100px 0px;
+}
+
+/* office */
+.office
+{
+    margin: 100px 0;
+    position: relative;
+    background-image: url(../img/office.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 500px
+}
+
+.office .container
+{
+/*
+    background-image: url(../img/office.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 600px;
+*/
+}
+
+.office .every-year
+{
+    background-color: #fff;
+    box-shadow: 0 5px 35px 0 rgba(0,0,0,.25);
+    position: absolute;
+    max-width: 730px;
+    top: -40px;
+    left: 500px;
+    padding: 50px 40px;
+    z-index: 1;
+}
+
+.office .office-contacts
+{
+    background-color: orange;
+    min-height: 300px;
+    min-width: 550px;
+    position: absolute;
+    top: 250px;
+    left: 400px;
+    padding: 50px;
+}
+
+/* three-steps */
+.three-steps
+{
+
+}
+
+.three-steps .steps
+{
+
+}
+
+.three-steps .steps .steps-header
+{
+
+}
+
+.three-steps .steps .steps-header .section-title
+{
+
+}
+
+.three-steps .steps .steps-header .section-title h3
+{
+
+}
+
+.three-steps .steps .steps-header .section-title p
+{
+
+}
+
+.three-steps .steps .step
+{
+
+}
+.three-steps .steps .step .step-body
+{
+    position: relative;
+}
+
+.three-steps .steps .step .step-body blockquote
+{
+    border-left: none;
+    position: relative;
+}
+
+.three-steps .steps .step .step-body blockquote:before
+{
+    content: "";
+    background-color: orange;
+    border-radius: 50%;
+
+    /* position */
+    position: absolute;
+    top: 0px;
+    left: -25px;
+
+    /* as block element */
+    display: block;
+    width: 40px;
+    height: 40px;
+}
+
+.three-steps .steps .step .step-body blockquote p
+{
+
+}
+
+.three-steps .steps .step .step-body .step-num
+{
+    position: absolute;
+    top: 6px;
+    left: -8px;
 }
