--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body
     font-family: 'PT Sans', sans-serif;
     color: #4c4c4c;
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 26px;
     word-spacing: 2px;
     -webkit-font-smoothing: antialiased;
@@ -44,7 +44,7 @@ a:hover
 
 .btn 
 {
-    font-size:16px;
+    font-size: 1.2em;
     letter-spacing: 1px;
     border-radius: 5px;
     padding: 8px 30px;
@@ -57,32 +57,25 @@ a:hover
 {
     padding: 10px 35px;
     letter-spacing: 2px;
-    font-size: 21px;
+    font-size: 1.25em;
 }
 
 .btn-main
 {
     color: #fff;
-/*    background-color: rgba(93,197,188,1);
-    border-color: rgba(93,197,188,1); 
-    background-color: rgba(40,182,246,1);
-    border-color: rgba(40,182,246,1); */
-    background-color: rgba(128,202,184,1);
-    border-color: rgba(128,202,184,1); */
 
-    text-transform: uppercase;
+    background-color: rgba(65,139,196,1);
+    border-color: rgba(65,139,196,1);
+
+/*    text-transform: uppercase; */
 }
 
 .btn-main:hover,
 .btn-main:focus,
 .btn-main:active
 {
-/*    
-    background-color: #33b5ac;
-    border-color: #33b5ac;
-*/
-    background-color: rgba(34,147,200,1);
-    border-color: rgba(34,147,200,1);
+    background-color: rgba(116,186,214,1);
+    border-color: rgba(116,186,214,1);
     color: #fff;
 }
 input
@@ -104,7 +97,7 @@ form .input
 }
 form .input input
 {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 form .input .fa-input
@@ -130,6 +123,7 @@ form button
 {
     margin-bottom: 70px;
 }
+
 .section-title h3
 {
     text-transform: uppercase;
@@ -169,26 +163,40 @@ form button
     -webkit-transition: background-color 0.3s, height 0.3s;
             transition: background-color 0.3s, height 0.3s;
 }
-
+/* toggle */
+.navbar-default .navbar-toggle
+{
+    border-color: rgba(117,98,101,1);
+    border-width: 2px;
+    margin-top: 24px;
+}
+.st-navbar-mini .navbar-toggle
+{
+    margin-top: 8px;
+    border-color: #fff;
+}
 /* хэдер после прокрутки  */
 .st-navbar-mini .navbar-default
 {
-/*    background-color: rgba(40, 40, 40, 0.95); */
-/*    background-color: rgba(60,60,60,0.95); */
-    background-color: rgba(54,71,79,0.95);
+    background-color: rgba(54,71,79,1);
     height: 60px;
 }
 
 .st-navbar-mini .navbar-default .navbar-brand
 {
     padding: 20px 15px;
-    font-size: 32px;
+    font-size: 2em;
     color: #fff;
 }
-
+.st-navbar-mini .navbar-default .navbar-brand img
+{
+/*    height: 24px; */
+}
 .st-navbar-mini .navbar-default .navbar-nav>li>a
 {
     color: #fff;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .st-navbar-mini .navbar-default .navbar-nav>li.active>a,
@@ -197,16 +205,16 @@ form button
 .st-navbar-mini .navbar-default .navbar-nav>li.active a:active
 {
     color: #fff;
-/*    background-color: rgba(0,0,0,0.5); */
     background-color: rgba(33,44,49,.95);
+    padding: 20px 15px 20px 15px;
 }
 
 .st-navbar-mini .navbar-default .navbar-nav>li>a:hover,
 .st-navbar-mini .navbar-default .navbar-nav>li>a:focus
 {
     color: #fff;
-/*    background-color: rgba(0,0,0,0.5); */
     background-color: rgba(33,44,49,.95);
+    padding: 20px 15px 20px 15px;
 }
 
 .st-navbar-mini .navbar-default .navbar-brand:focus,
@@ -216,19 +224,22 @@ form button
 }
 
 /* logo */
+.navbar-default .navbar-brand
+{
+    color: rgba(117,98,101,1);
+}
 .navbar-brand
 {
-    font-size: 48px;
-    font-weight: 800;
     height: auto;
     padding: 27px 15px;
     -webkit-transition: padding 0.3s;
             transition: padding 0.3s;
+    font-style: italic;
 }
 
 .navbar-brand img
 {
-    height: 48px;
+/*    height: 36px;*/
     -webkit-transition: height 0.3s;
             transition: height 0.3s;
 }
@@ -236,22 +247,22 @@ form button
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:hover
 {
-    color: #777;
+    color: rgba(117,98,101,1);
 }
 /* navigation */
 .navbar-nav>li>a
 {
-    font-size: 18px;
-    font-weight: 600;
+    font-size: 1.5em;
+    font-weight: 700;
     letter-spacing: 1px;
-    padding: 20px 20px 20px 20px;
+    padding: 35px 15px 45px 15px;
     -webkit-transition: color 0.3s, background-color 0.3s, padding 0.3s;
             transition: color 0.3s, background-color 0.3s, padding 0.3s;
 }
 
 .navbar-default .navbar-nav>li>a
 {
-    color: #777;
+    color: rgba(117,98,101,1);
 }
 
 .navbar-default .navbar-nav>li.active>a,
@@ -259,31 +270,33 @@ form button
 .navbar-default .navbar-nav>li.active a:focus,
 .navbar-default .navbar-nav>li.active a:active
 {
-    color: #000;
     background-color: rgba(0,0,0,0);
 }
 
 .navbar-default .navbar-nav>li>a:hover,
 .navbar-default .navbar-nav>li>a:focus
 {
-    color: #000;
+    color: #fff;
+}
+
+.navbar-default .navbar-nav>.active>a,
+.navbar-default .navbar-nav>.active>a:focus, 
+.navbar-default .navbar-nav>.active>a:hover
+{
+    color: rgba(97,89,90,1);
+
 }
 /* home  */
 .home
 {
-    background-image: url(../img/jumbotron-bg.jpg);  
-    background-image: url(../img/jumbotron-bg1.jpg);  
-    background-image: url(../img/jumbotron-bg2.jpg);  
-    background-image: url(../img/jumbotron-bg3.jpg);  
-    background-image: url(../img/jumbotron-bg4.jpg);  
-    background-image: url(../img/jumbotron-bg5.jpg);  
+    background-image: url(../img/jumbotron-bg.png);  
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-color: rgba(255,255,255,1);
     margin: 0;
-    padding: 100px 0 60px 0;
+    padding: 100px 0 40px 0;
     position: relative;
 }
 
@@ -298,6 +311,16 @@ form button
     text-align: center;
 }
 
+.home .hero-txt .btn-home
+{
+    font-size: .7em;
+    letter-spacing: 0;
+}
+
+.home .hero-txt .btn-home:hover
+{
+}
+
 .home .hero-txt .hero-title
 {
     font-family: 'PT Sans Caption', sans-serif;
@@ -305,7 +328,7 @@ form button
     font-weight: 700;
     text-transform: uppercase;
     margin-bottom: 15px; 
-    margin-top: 50px; 
+    margin-top: 0px; 
     margin-bottom: 20px;
     padding-top: 20px;
     padding-bottom: 10px; 
@@ -313,7 +336,7 @@ form button
 }
 .home .hero-txt .hero-title h2
 {
-    font-size: 74px;
+    font-size: 2.35em;
     line-height: 1.2;
 }
 .home .hero-txt .hero-title span
@@ -323,12 +346,12 @@ form button
 }
 .home .hero-txt .hero-title .with-us
 {
-    font-size: 36px;
-    line-height: 1.2;
+    font-size: 1.3em;
+    line-height: 1.4;
 }
 .home .hero-txt .hero-title .brand
 {
-    font-size: 78px;
+    font-size: 2.24em;
     line-height: 1.2;
 }
 
@@ -363,12 +386,11 @@ form button
     margin: 20px auto; 
     color: #fff;
     padding: 20px 0; 
-    font-size: 24px;
+    font-size: .7em;
     font-weight: 200;
-    line-height: 0.75;
+    line-height: 0.8;
 /*    text-shadow: 1px 1px #333;   */
     text-align: center;
-    display: none;
 }
 
 .st-home-unit
@@ -468,7 +490,7 @@ form button
 /* testimonials */
 .testimonials
 {
-    padding: 60px 0;
+    padding: 40px 0;
     background-color: #889ca7;
     color: #fff;
 }
@@ -485,31 +507,6 @@ form button
     margin-right: 30px;
     position: relative;
 }
-
-.testimonial .testimonial-img:after
-{
-    content: '';
-    display: block;
-    width: 40px;
-    height: 40px;
-    border-radius: 40px;
-    background-color: rgba(40,182,246,1);
-    position: absolute;
-    bottom: 5%;
-    left: 5%;
-}
-
-.testimonial .testimonial-img:before
-{
-    font-family: 'Tenor Sans', sans-serif;
-    content: '\201C';
-    font-size: 40px;
-    position: absolute;
-    bottom: 1%;
-    left: 12%;
-    z-index: 99;
-}
-
 .testimonial .testimonial-img img
 {
     border-radius: 50%;
@@ -523,11 +520,29 @@ form button
 
 .testimonial blockquote p
 {
+    font-family: 'PT Sans';
+    font-size: 18px;
+    line-height: 20px;
     font-style: italic;
     font-weight: 300;
     text-align: justify;
 }
 
+
+.testimonial blockquote p:after,
+.testimonial blockquote p:before
+{
+    font-family: 'Tenor Sans', sans-serif;
+    content: '\201C';
+    font-size: 24px;
+    padding-right: 5px;
+}
+
+
+.testimonial blockquote footer
+{
+    font-size: 20px;
+}
 .testimonial blockquote footer,
 .testimonial blockquote small,
 .testimonial blockquote .small
@@ -539,19 +554,24 @@ form button
 {
     color: #4c4c4c;
 }
+
+.testimonial-bg-1
+{
+}
 /* colors */
 .orange
 {
+
     background-color: rgba(212,90,46,1); 
 }
-.pink
+.light-pink
 {
-    background-color: rgba(189,49,73,1);
+    background-color: rgba(170,139,144,1);
 }
 
 .ocean
 {
-    background-color: rgba(135,194,191,1);
+    background-color: rgba(108,186,187,1);
 }
 
 .yellow
@@ -559,11 +579,15 @@ form button
     background-color: rgba(244,212,90,1);
 }
 
-.light-pink
+.pink
 {
-    background-color: rgba(214,124,140,1);    
+    background-color: rgba(226,119,119,1);    
 }
 
+.green
+{
+    background-color: rgba(121,175,143,1);
+}
 .black
 {
     color: #4c4c4c;
@@ -709,7 +733,8 @@ form button
 .features-desc
 {
     padding: 100px 0;
-/*    background-color: rgba(221,240,236,1); */
+    background-color: rgba(152,152,152,1);
+    color: #fff;
 }
 
 .features-desc .img-general
@@ -718,28 +743,48 @@ form button
     margin-left: auto;
     margin-right: auto;
 }
+.features-desc .dear-friends
+{
+    padding-left: 60px;
+    text-align: left;
+}
+
 .features-desc .center
 {
-    display: block;
-    text-align: center;
-    margin-top: 20px;
+    font-size: 14px;
 }
 .features-desc h3
 {
-    text-align: center;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 38px;
+    font-size: 48px;
+    line-height: 58px;
+    letter-spacing: -1px;
+    margin-top: -10px;
+}
+
+.features-desc span
+{
+    font-size: 34px;
+    letter-spacing: -1px;
 }
 .features-desc p
 {
-    margin-top: 20px;
     font-size: 18px;
     text-align: justify;
-    padding-left: 60px;
+    padding-right: 30px;
+    margin: 0px;
+}
+
+.features-desc p:before
+{
+    content: '';
     padding-right: 30px;
 }
 
+.features-desc a
+{
+    margin-top : 20px;
+}
 /* adventages */
 .adventages
 {
@@ -968,6 +1013,7 @@ form button
 
 .office .every-year
 {
+    display: none;
     background-color: #fff;
     box-shadow: 0 5px 35px 0 rgba(0,0,0,.25);
     position: absolute;
@@ -980,9 +1026,10 @@ form button
 
 .office .office-contacts
 {
+    display: none;
     background-color: orange;
     min-height: 300px;
-    min-width: 550px;
+    min-width: 400px;
     position: absolute;
     top: 250px;
     left: 400px;
